--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de Dados</title>
+    <title>RPGAVR: audiodescrição</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="dice">
-        <button id="rollButton" class="full-screen-button">Rolar Dado</button>
+        <button id="rollButton" class="full-screen-button" aria-label="Clique para rolar o dado de seis lados">Clique para rolar o dado de seis lados</button>
         <div id="result" class="result">Resultado: </div>
     </div>
     <audio id="audioElement1">
