--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="dice">
-        <button id="rollButton" class="full-screen-button" aria-label="Clique para rolar o dado de seis lados">Clique para rolar o dado de seis lados</button>
+        <button id="rollButton" class="full-screen-button">Clique para rolar o dado de seis lados</button>
         <div id="result" class="result">Resultado: </div>
     </div>
     <audio id="audioElement1">
