--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="dice">
         <button id="rollButton" class="full-screen-button">Clique para rolar o dado de seis lados</button>
-        <div id="result" class="result">Resultado: </div>
+        <div id="result" class="result" style="text-align: center;">Resultado: </div>
     </div>
     <audio id="audioElement1">
         <source src="audio/um.mp3" type="audio/mpeg">
