--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="dice">
-        <button id="rollButton" class="full-screen-button">Clique para rolar o dado de seis lados</button>
-        <div id="result" class="result" style="text-align: center;">Resultado: </div>
+        <button id="rollButton" class="full-screen-button">Clique para rolar o dado de seis lados</button> 
+        <div id="result" class="result">Resultado: </div>
     </div>
     <audio id="audioElement1">
         <source src="audio/um.mp3" type="audio/mpeg">
